--- a/cluster/apps/downloads/sabnzbd/helm-release.yaml
+++ b/cluster/apps/downloads/sabnzbd/helm-release.yaml
@@ -24,8 +24,8 @@ spec:
   dependsOn:
     - name: rook-ceph-cluster
       namespace: rook-ceph
-    - name: vpn-gateway
-      namespace: vpn-gateway
+    #- name: vpn-gateway
+    #  namespace: vpn-gateway
   values:
     image:
       repository: ghcr.io/home-operations/sabnzbd
