Add medium res stream
Signed-off-by: Zee Aslam <zeet6613@gmail.com>

--- a/cluster/apps/home/go2rtc/app/resources/go2rtc.yaml
+++ b/cluster/apps/home/go2rtc/app/resources/go2rtc.yaml
@@ -15,5 +15,6 @@ streams:
   # Change rtsps to rtspx and strip the ?enableSrtp query param
   backdoor:
     - rtspx://${LOCAL_GATEWAY_BIG_BLOOP}:7441/wZV1YtrUa1IMP0AZ
+    - rtspx://${LOCAL_GATEWAY_BIG_BLOOP}:7441/aatTGTxvMk28IIga
   living_room:
     - rtspx://${LOCAL_GATEWAY_BIG_BLOOP}:7441/eh9U3hNIIpurmCIO
