--- a/cluster/apps/home/go2rtc/app/helm-release.yaml
+++ b/cluster/apps/home/go2rtc/app/helm-release.yaml
@@ -82,6 +82,8 @@ spec:
     route:
       app:
         hostnames: ["{{ .Release.Name }}.${XYZ_DOMAIN}"]
+        annotations:
+          traefik.ingress.kubernetes.io/router.entrypoints: websecure
         parentRefs:
           - name: internal
             namespace: kube-system
