(go2rtc) add cert manager annotation
Signed-off-by: Zee Aslam <zeet6613@gmail.com>

--- a/cluster/apps/home/go2rtc/app/helm-release.yaml
+++ b/cluster/apps/home/go2rtc/app/helm-release.yaml
@@ -82,6 +82,8 @@ spec:
     route:
       app:
         hostnames: ["{{ .Release.Name }}.${XYZ_DOMAIN}"]
+        annotations:
+          cert-manager.io/cluster-issuer: letsencrypt-production
         parentRefs:
           - name: internal
             namespace: kube-system
