(go2rtc) mount certs
Signed-off-by: Zee Aslam <zeet6613@gmail.com>

--- a/cluster/apps/home/go2rtc/app/helm-release.yaml
+++ b/cluster/apps/home/go2rtc/app/helm-release.yaml
@@ -100,3 +100,15 @@ spec:
           - path: /config/go2rtc.yaml
             subPath: go2rtc.yaml
             readOnly: true
+      tls-crt:
+        name: tls.go2rtc
+        type: secret
+        globalMounts:
+          - subPath: tls.crt
+            path: /config/ssl/go2rtc.crt
+      tls-key:
+        name: tls.go2rtc
+        type: secret
+        globalMounts:
+          - subPath: tls.key
+            path: /config/ssl/go2rtc.key
