(authentik) hide vol mounts for now

--- a/cluster/apps/auth/authentik/helm-release.yaml
+++ b/cluster/apps/auth/authentik/helm-release.yaml
@@ -129,14 +129,14 @@ spec:
       metrics:
         serviceMonitor:
           create: true
-      volumes:
-        - name: postgres-creds
-          secret:
-            secretName: authentik-postgres-credentials
-      volumeMounts:
-        - name: postgres-creds
-          mountPath: /postgres-creds
-          readOnly: true
+      # volumes:
+      #   - name: postgres-creds
+      #     secret:
+      #       secretName: authentik-postgres-credentials
+      # volumeMounts:
+      #   - name: postgres-creds
+      #     mountPath: /postgres-creds
+      #     readOnly: true
       ingress:
         enabled: true
         ingressClassName: "traefik"
@@ -177,14 +177,14 @@ spec:
 
     worker:
       replicas: 2
-      volumes:
-        - name: postgres-creds
-          secret:
-            secretName: authentik-postgres-credentials
-      volumeMounts:
-        - name: postgres-creds
-          mountPath: /postgres-creds
-          readOnly: true
+      # volumes:
+      #   - name: postgres-creds
+      #     secret:
+      #       secretName: authentik-postgres-credentials
+      # volumeMounts:
+      #   - name: postgres-creds
+      #     mountPath: /postgres-creds
+      #     readOnly: true
 
     serviceAccount:
       # -- Service account is needed for managed outposts
