--- a/cluster/apps/auth/authentik/helm-release.yaml
+++ b/cluster/apps/auth/authentik/helm-release.yaml
@@ -10,7 +10,7 @@ spec:
     spec:
       # renovate: registryUrl=https://charts.goauthentik.io/
       chart: authentik
-      version: 2024.10.5
+      version: 2024.12.3
       sourceRef:
         kind: HelmRepository
         name: authentik-charts
@@ -35,7 +35,7 @@ spec:
       fullnameOverride: authentik
       image:
         repository: ghcr.io/goauthentik/server
-        # tag: 2023.6.1 # default follows chart version
+        tag: 2024.12.5 # default follows chart version
         # repository: ghcr.io/goauthentik/dev-server
         # tag: gh-providers-proxy-rework-endpoints-1679090841-c08a9a2
       revisionHistoryLimit: 3
