--- a/cluster/apps/downloads/whisparr/helm-release.yaml
+++ b/cluster/apps/downloads/whisparr/helm-release.yaml
@@ -77,6 +77,8 @@ spec:
               - *host
             secretName: tls.whisparr
     podSecurityContext:
+      runAsUser: 0
+      runAsGroup: 0
       fsGroup: ${MEDIA_GID}
       fsGroupChangePolicy: "OnRootMismatch"
       supplementalGroups:
