--- a/cluster/apps/flux-system/image-update-automation.yaml
+++ b/cluster/apps/flux-system/image-update-automation.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: image.toolkit.fluxcd.io/v1beta1
+apiVersion: image.toolkit.fluxcd.io/v1
 kind: ImageUpdateAutomation
 metadata:
   name: flux-system
