(flux) update imagepolicy and image-repo to v1

--- a/cluster/repositories/image-repos/home-operations/plex.yaml
+++ b/cluster/repositories/image-repos/home-operations/plex.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: image.toolkit.fluxcd.io/v1beta1
+apiVersion: image.toolkit.fluxcd.io/v1
 kind: ImageRepository
 metadata:
   name: plex
@@ -12,7 +12,7 @@ spec:
   #     - matchLabels:
   #         kubernetes.io/metadata.name: media
 ---
-apiVersion: image.toolkit.fluxcd.io/v1beta1
+apiVersion: image.toolkit.fluxcd.io/v1
 kind: ImagePolicy
 metadata:
   name: plex
