--- a/cluster/repositories/image-repos/gitlab/bloopyboi.yaml
+++ b/cluster/repositories/image-repos/gitlab/bloopyboi.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: image.toolkit.fluxcd.io/v1beta1
+apiVersion: image.toolkit.fluxcd.io/v1
 kind: ImageRepository
 metadata:
   name: bloopyboi
@@ -8,7 +8,7 @@ spec:
   interval: 60m
   image: registry.gitlab.com/h3mmy/bloopyboi
 ---
-apiVersion: image.toolkit.fluxcd.io/v1beta1
+apiVersion: image.toolkit.fluxcd.io/v1
 kind: ImagePolicy
 metadata:
   name: bloopyboi
