--- a/cluster/config/cluster-settings.yaml
+++ b/cluster/config/cluster-settings.yaml
@@ -24,6 +24,7 @@ data:
   LB_V4_K8S_API: 10.1.0.65
   LB_V4_K8S_GATEWAY: 10.1.0.116
   LB_V4_GO2RTC: 10.10.100.5
+  LB_V4_MASS: 10.10.100.8
   LB_V4_MINECRAFT: 10.1.0.106
   LB_V4_PLEX: 10.1.0.105
   LB_V4_PROMTAIL: 10.1.0.103
