--- a/cluster/apps/media/music-assistant/app/kustomization.yaml
+++ b/cluster/apps/media/music-assistant/app/kustomization.yaml
@@ -8,4 +8,4 @@ commonLabels:
   app.kubernetes.io/instance: music-assistant
 resources:
   - ./helm-release.yaml
-  - ./pvc-config-v1.yaml
+  - ./pvc-data-v1.yaml
