--- a/cluster/apps/infra/tofu-controller/app/helm-release.yaml
+++ b/cluster/apps/infra/tofu-controller/app/helm-release.yaml
@@ -8,11 +8,11 @@ spec:
   interval: 30m
   chart:
     spec:
-      chart: tf-controller
-      version: 0.16.0-rc.4
+      chart: tofu-controller
+      version: 0.16.0-rc.5
       sourceRef:
         kind: HelmRepository
-        name: tf-controller
+        name: tofu-controller
         namespace: flux-system
       interval: 30m
 
