--- a/cluster/apps/media/tdarr/ks.yaml
+++ b/cluster/apps/media/tdarr/ks.yaml
@@ -14,11 +14,11 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
-  healthChecks:
-    - apiVersion: helm.toolkit.fluxcd.io/v2beta2
-      kind: HelmRelease
-      name: tdarr
-      namespace: media
+  # healthChecks:
+  #   - apiVersion: helm.toolkit.fluxcd.io/v2beta2
+  #     kind: HelmRelease
+  #     name: tdarr
+  #     namespace: media
   interval: 30m
   retryInterval: 1m
   timeout: 3m
@@ -50,11 +50,11 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
-  healthChecks:
-    - apiVersion: helm.toolkit.fluxcd.io/v2beta2
-      kind: HelmRelease
-      name: tdarr-node
-      namespace: media
+  # healthChecks:
+  #   - apiVersion: helm.toolkit.fluxcd.io/v2beta2
+  #     kind: HelmRelease
+  #     name: tdarr-node
+  #     namespace: media
   interval: 30m
   retryInterval: 1m
   timeout: 3m
