--- a/cluster/core/rook-ceph/rook-ceph/cluster/helm-release.yaml
+++ b/cluster/core/rook-ceph/rook-ceph/cluster/helm-release.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrelease-helm-v2.json
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
@@ -10,7 +11,7 @@ spec:
     spec:
       # renovate: registryUrl=https://charts.rook.io/release
       chart: rook-ceph-cluster
-      version: v1.18.3
+      version: v1.18.4
       sourceRef:
         kind: HelmRepository
         name: rook-ceph-charts
