--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -49,7 +49,7 @@ spec:
     core:
       defaultRuleSyntax: v2
     image:
-      name: traefik
+      repository: traefik
     deployment:
       kind: Deployment
       replicas: 2
@@ -104,7 +104,6 @@ spec:
     ingressClass:
       enabled: true
       isDefaultClass: true
-      fallbackApiVersion: v1
     ingressRoute:
       dashboard:
         enabled: false
