add gateway class

--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -301,6 +301,11 @@ spec:
         maxVersion: VersionTLS13
     gateway:
       enabled: true
+      annotations:
+        external-dns.alpha.kubernetes.io/target: &hostname "in.${XYZ_DOMAIN}"
+      infrastructure:
+        annotations:
+          external-dns.alpha.kubernetes.io/hostname: *hostname
       listeners:
         web:
           port: *webPort
