--- a/cluster/apps/networking/kustomization.yaml
+++ b/cluster/apps/networking/kustomization.yaml
@@ -11,4 +11,4 @@ resources:
   # - ddns
   - ./k8s-gateway
   # - zero-trust
-  - ./gateway/gateway-class.yaml
+  - ./gateway-api/gateway-class.yaml
