fix missing ip-sans

--- a/cluster/apps/networking/traefik/routers/networking-camelus.yaml
+++ b/cluster/apps/networking/traefik/routers/networking-camelus.yaml
@@ -8,6 +8,7 @@ metadata:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
     traefik.ingress.kubernetes.io/router.middlewares: networking-rfc1918@kubernetescrd
     cert-manager.io/cluster-issuer: letsencrypt-production
+    cert-manager.io/ip-sans: ${NAS_ADDRESS}
     hajimari.io/appName: camelus-plexii
     hajimari.io/instance: bloop-xyz
     hajimari.io/enable: "true"
