(blocky) fix DoH path

--- a/cluster/apps/networking/blocky/app/helm-release.yaml
+++ b/cluster/apps/networking/blocky/app/helm-release.yaml
@@ -163,7 +163,7 @@ spec:
               - path: /dns-query
                 pathType: Prefix
                 service:
-                  name: dns-https
+                  name: dns
                   port: 443
               - path: /
                 pathType: Prefix
