try tweaking traefik crd

--- a/cluster/apps/auth/realms/bloopysphere/keycloak/instance/routers/kc-iam-ingressroute.yaml
+++ b/cluster/apps/auth/realms/bloopysphere/keycloak/instance/routers/kc-iam-ingressroute.yaml
@@ -21,6 +21,6 @@ spec:
           name: kc-instance-service
           port: 8443
       middlewares:
-        - name: networking-rate-limit@kubernetescrd
+        - name: networking-chain-no-auth@kubernetescrd
   tls:
     secretName: "tls.${XYZ_DOMAIN/./-}"
