--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -113,6 +113,7 @@ spec:
       dashboard:
         enabled: false
     globalArguments:
+      - "--api=true"
       - "--api.dashboard=true"
       - "--api.insecure=true"
       - "--serverstransport.insecureskipverify=true"
