--- a/cluster/apps/auth/realms/bloopysphere/keycloak/instance/kustomization.yaml
+++ b/cluster/apps/auth/realms/bloopysphere/keycloak/instance/kustomization.yaml
@@ -3,4 +3,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./keycloak.yaml
-  - ./routers/kc-iam-ingressroute.yaml
+  - ./routers/kc-iam-ingress.yaml
