--- a/cluster/apps/media/navidrome/ks.yaml
+++ b/cluster/apps/media/navidrome/ks.yaml
@@ -3,17 +3,17 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-media-navidrome
+  name: &app navidrome
   namespace: &namespace media
 spec:
   commonMetadata:
     labels:
-      app.kubernetes.io/name: navidrome
+      app.kubernetes.io/name: *app
   dependsOn:
     # - name: external-secrets-stores
     #   namespace: external-secrets
     - name: rook-ceph-cluster
-      namespace: rook-ceph
+      namespace: flux-system
   # components:
   #   - ../../../../components/gatus/external
   #   - ../../../../components/volsync
