--- a/cluster/apps/media/navidrome/ks.yaml
+++ b/cluster/apps/media/navidrome/ks.yaml
@@ -3,17 +3,16 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app navidrome
-  namespace: &namespace media
+  name: cluster-media-navidrome
+  namespace: flux-system
 spec:
   commonMetadata:
     labels:
-      app.kubernetes.io/name: *app
+      app.kubernetes.io/name: navidrome
   dependsOn:
     # - name: external-secrets-stores
     #   namespace: external-secrets
     - name: core
-      namespace: flux-system
   # components:
   #   - ../../../../components/gatus/external
   #   - ../../../../components/volsync
@@ -36,6 +35,6 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  targetNamespace: *namespace
+  targetNamespace: media
   timeout: 5m
   wait: false
