--- a/cluster/apps/networking/gateway-api/gateway-0.yaml
+++ b/cluster/apps/networking/gateway-api/gateway-0.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   gatewayClassName: traefik
   listeners:
-    - name: websecure
+    - name: https
       hostname: '*.${XYZ_DOMAIN}'
       port: 8443
       protocol: HTTPS
