--- a/cluster/apps/networking/traefik/dashboard/ingress.yaml
+++ b/cluster/apps/networking/traefik/dashboard/ingress.yaml
@@ -12,6 +12,7 @@ metadata:
     hajimari.io/instance: "bloop-quarky"
     hajimari.io/url: "https://traefik.${XYZ_DOMAIN}"
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+    traefik.ingress.kubernetes.io/router.middlewares: networking-xyz-auth@kubernetescrd
     external-dns.alpha.kubernetes.io/hostname: in.${XYZ_DOMAIN}
     external-dns/is-public: "true"
 spec:
