--- a/cluster/core/cert-manager/controller/app/helm-release.yaml
+++ b/cluster/core/cert-manager/controller/app/helm-release.yaml
@@ -43,9 +43,10 @@ spec:
     cleanupOnFail: true
 
   values:
-    crds:
-      enabled: true
-      keep: true
+    installCRDs: true
+    # crds:
+    #   enabled: true
+    #   keep: true
     #webhook:
      # enabled: true
     # block to enable gateway resource features
