--- a/cluster/apps/media/music-assistant/ks.yaml
+++ b/cluster/apps/media/music-assistant/ks.yaml
@@ -13,6 +13,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+    namespace: flux-system
   wait: false
   decryption:
     provider: sops
