--- a/cluster/apps/auth/realms/bloopysphere/keycloak/instance/routers/kc-iam-httproute.yaml
+++ b/cluster/apps/auth/realms/bloopysphere/keycloak/instance/routers/kc-iam-httproute.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   parentRefs:
     - name: traefik
-      sectionName: https
+      sectionName: websecure
       namespace: networking
   hostnames:
     - iam.${XYZ_DOMAIN}
