--- a/cluster/apps/media/kustomization.yaml
+++ b/cluster/apps/media/kustomization.yaml
@@ -27,5 +27,5 @@ resources:
   - ./plex-trakt-sync
   - ./stash/ks.yaml
   - ./recyclarr/ks.yaml
-  - ./music-assistant/ks.yaml
-  - ./navidrome/ks.yaml
+#  - ./music-assistant/ks.yaml
+  #- ./navidrome/ks.yaml
