--- a/cluster/apps/media/kustomization.yaml
+++ b/cluster/apps/media/kustomization.yaml
@@ -1,9 +1,6 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: media
-components:
-  - ../../components/common
 resources:
   - ./priority-class.yaml
   - ./media-pv
@@ -27,5 +24,5 @@ resources:
   - ./plex-trakt-sync
   - ./stash/ks.yaml
   - ./recyclarr/ks.yaml
-#  - ./music-assistant/ks.yaml
-  #- ./navidrome/ks.yaml
+  - ./music-assistant/ks.yaml
+  - ./navidrome/ks.yaml
