--- a/cluster/apps/media/navidrome/app/kustomization.yaml
+++ b/cluster/apps/media/navidrome/app/kustomization.yaml
@@ -3,6 +3,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: media
+components:
+  - ../../../../components/common
 commonLabels:
   app.kubernetes.io/name: navidrome
   app.kubernetes.io/instance: navidrome
