--- a/cluster/apps/media/navidrome/app/helm-release.yaml
+++ b/cluster/apps/media/navidrome/app/helm-release.yaml
@@ -33,7 +33,7 @@ spec:
               tag: 0.58.0@sha256:2ae037d464de9f802d047165a13b1c9dc2bdbb14920a317ae4aef1233adc0a3c
             env:
               TZ: "${TZ}"
-              ND_BASEURL: "{{ .Release.Name }}.${XYZ_DOMAIN}"
+              ND_BASEURL: "https://{{ .Release.Name }}.${XYZ_DOMAIN}"
               ND_DATAFOLDER: /config
               ND_ENABLEGRAVATAR: "true"
               ND_LOGLEVEL: info
@@ -72,7 +72,7 @@ spec:
         parentRefs:
           - name: traefik
             namespace: networking
-            sectionName: https
+            sectionName: websecure
         rules:
           - backendRefs:
               - name: *app
