--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -65,6 +65,7 @@ spec:
       dashboard:
         enabled: true
       disabledashboardad: true
+      insecure: true
     service:
       enabled: true
       type: LoadBalancer
