Update traefik api ingress.yaml
Signed-off-by: Zee Aslam <zeet6613@gmail.com>

--- a/cluster/apps/networking/traefik/dashboard/ingress.yaml
+++ b/cluster/apps/networking/traefik/dashboard/ingress.yaml
@@ -30,7 +30,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: traefik
+                name: traefik-api
                 port:
                   number: 8080
     - host: "traefik.${XYZ_DOMAIN}"
@@ -40,6 +40,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: traefik
+                name: traefik-api
                 port:
                   number: 8080
