--- a/cluster/apps/media/sonarr/routers/media-sonarr-uhd-bypass.yaml
+++ b/cluster/apps/media/sonarr/routers/media-sonarr-uhd-bypass.yaml
@@ -9,7 +9,7 @@ spec:
     - websecure
   routes:
     - kind: Rule
-      match: Host(`sonarr-uhd.${XYZ_DOMAIN}`) && (Headers(`X-Api-Key`, `${SONARR_UHD_API_KEY}`) || Query(`apikey`, `${SONARR_UHD_API_KEY}`))
+      match: Host(`sonarr-uhd.${XYZ_DOMAIN}`) && (Header(`X-Api-Key`, `${SONARR_UHD_API_KEY}`) || Query(`apikey`, `${SONARR_UHD_API_KEY}`))
       priority: 100
       services:
         - kind: Service
