--- a/cluster/apps/media/bazarr/api-passthrough.yaml
+++ b/cluster/apps/media/bazarr/api-passthrough.yaml
@@ -9,7 +9,7 @@ spec:
     - websecure
   routes:
     - kind: Rule
-      match: Host(`bazarr.${XYZ_DOMAIN}`) && (Headers(`X-Api-Key`, `${BAZARR_API_KEY}`) || Query(`apikey`, `${BAZARR_API_KEY}`))
+      match: Host(`bazarr.${XYZ_DOMAIN}`) && (Header(`X-Api-Key`, `${BAZARR_API_KEY}`) || Query(`apikey`, `${BAZARR_API_KEY}`))
       priority: 100
       services:
         - kind: Service
