--- a/cluster/apps/media/books/readarr-audio/routers/media-readarr-audio-bypass.yaml
+++ b/cluster/apps/media/books/readarr-audio/routers/media-readarr-audio-bypass.yaml
@@ -9,7 +9,7 @@ spec:
     - websecure
   routes:
     - kind: Rule
-      match: Host(`readarr-audio.${XYZ_DOMAIN}`) && (Headers(`X-Api-Key`, `${READARR_AUDIO_API_KEY}`) || Query(`apikey`, `${READARR_AUDIO_API_KEY}`))
+      match: Host(`readarr-audio.${XYZ_DOMAIN}`) && (Header(`X-Api-Key`, `${READARR_AUDIO_API_KEY}`) || Query(`apikey`, `${READARR_AUDIO_API_KEY}`))
       priority: 100
       services:
         - kind: Service
