--- a/cluster/apps/media/lidarr/routers/media-lidarr-bypass.yaml
+++ b/cluster/apps/media/lidarr/routers/media-lidarr-bypass.yaml
@@ -9,7 +9,7 @@ spec:
     - websecure
   routes:
     - kind: Rule
-      match: Host(`lidarr.${XYZ_DOMAIN}`) && (Headers(`X-Api-Key`, `${LIDARR_API_KEY}`) || Query(`apikey`, `${LIDARR_API_KEY}`))
+      match: Host(`lidarr.${XYZ_DOMAIN}`) && (Header(`X-Api-Key`, `${LIDARR_API_KEY}`) || Query(`apikey`, `${LIDARR_API_KEY}`))
       priority: 100
       services:
         - kind: Service
