--- a/cluster/apps/media/prowlarr/routers/media-prowlarr-bypass.yaml
+++ b/cluster/apps/media/prowlarr/routers/media-prowlarr-bypass.yaml
@@ -9,7 +9,7 @@ spec:
     - websecure
   routes:
     - kind: Rule
-      match: Host(`prowlarr.${XYZ_DOMAIN}`) && (Headers(`X-Api-Key`, `${PROWLARR_API_KEY}`) || Query(`apikey`, `${PROWLARR_API_KEY}`))
+      match: Host(`prowlarr.${XYZ_DOMAIN}`) && (Header(`X-Api-Key`, `${PROWLARR_API_KEY}`) || Query(`apikey`, `${PROWLARR_API_KEY}`))
       priority: 100
       services:
         - kind: Service
