--- a/cluster/apps/media/radarr/routers/media-radarr-bypass.yaml
+++ b/cluster/apps/media/radarr/routers/media-radarr-bypass.yaml
@@ -9,7 +9,7 @@ spec:
     - websecure
   routes:
     - kind: Rule
-      match: Host(`radarr.${XYZ_DOMAIN}`) && (Headers(`X-Api-Key`, `${RADARR_API_KEY}`) || Query(`apikey`, `${RADARR_API_KEY}`))
+      match: Host(`radarr.${XYZ_DOMAIN}`) && (Header(`X-Api-Key`, `${RADARR_API_KEY}`) || Query(`apikey`, `${RADARR_API_KEY}`))
       priority: 100
       services:
         - kind: Service
