--- a/cluster/apps/media/tautulli/routers/media-tautulli-bypass.yaml
+++ b/cluster/apps/media/tautulli/routers/media-tautulli-bypass.yaml
@@ -9,7 +9,7 @@ spec:
     - websecure
   routes:
     - kind: Rule
-      match: Host(`tautulli.${XYZ_DOMAIN}`) && (Headers(`X-Api-Key`, `${TAUTULLI_API_KEY}`) || Query(`apikey`, `${TAUTULLI_API_KEY}`))
+      match: Host(`tautulli.${XYZ_DOMAIN}`) && (Header(`X-Api-Key`, `${TAUTULLI_API_KEY}`) || Query(`apikey`, `${TAUTULLI_API_KEY}`))
       priority: 100
       services:
         - kind: Service
