--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -111,7 +111,7 @@ spec:
     ingressRoute:
       dashboard:
         enabled: false
-    globalArguments:
+    additionalArguments:
       - "--api.insecure=true"
       - "--serverstransport.insecureskipverify=true"
       - "--global.checknewversion=true"
